<resources>
    <string name="app_name">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="no_weather_item">No cities added</string>
    <string name="humidity">Humidity :</string>
    <string name="wind">Wind :</string>
    <string name="precipitation">Precipitation :</string>
    <string name="add_city_title">Add a city</string>
    <string name="city">City</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="error_msg_internet">An error occured :(, check your internet connection!</string>
    <string name="again">Retry</string>
    <string name="country_not_found">City not found</string>
    <string name="country_exists">City already added</string>
    <string name="card_discription">Discription :</string>
    <string name="settings">Settings</string>
</resources>
