<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

        android:id="@+id/cv_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        card_view:cardBackgroundColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sky">

            <TextView
                android:id="@+id/tv_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8_dp"
                android:layout_marginLeft="@dimen/margin_8_dp"
                android:layout_marginTop="@dimen/dialog_top_16_dp"
                android:layout_marginEnd="@dimen/margin_8_dp"
                android:layout_marginRight="@dimen/margin_8_dp"
                android:textColor="@color/white"
                android:textSize="@dimen/card_title_size"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                tools:text="Paris" />

            <ImageView
                android:id="@+id/iv_weather_icon"
                android:layout_width="0dp"
                android:layout_height="@dimen/card_weather_icon_height"
                android:layout_marginStart="@dimen/dialog_top_16_dp"
                android:layout_marginLeft="@dimen/dialog_top_16_dp"
                android:layout_marginTop="@dimen/dp_64"
                android:layout_marginEnd="@dimen/dialog_top_16_dp"
                android:layout_marginRight="@dimen/dialog_top_16_dp"
                android:src="@drawable/sw_01"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="1.0"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_city_name" />

            <ImageView
                android:id="@+id/iv_celsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8_dp"
                android:layout_marginLeft="@dimen/margin_8_dp"
                android:layout_marginTop="@dimen/margin_8_dp"
                android:layout_marginEnd="@dimen/margin_8_dp"
                android:layout_marginRight="@dimen/margin_8_dp"
                android:layout_marginBottom="@dimen/margin_8_dp"
                android:src="@drawable/celsius"
                android:visibility="gone"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.79"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/iv_weather_icon"
                card_view:layout_constraintVertical_bias="0.100000024" />

            <TextView
                android:id="@+id/tv_degree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8_dp"
                android:layout_marginLeft="@dimen/margin_8_dp"
                android:layout_marginTop="@dimen/margin_8_dp"
                android:layout_marginEnd="@dimen/margin_8_dp"
                android:layout_marginRight="@dimen/margin_8_dp"
                android:layout_marginBottom="@dimen/margin_8_dp"
                android:ellipsize="end"
                android:textAlignment="center"

                android:textColor="@color/white"
                android:textSize="@dimen/card_temp_size"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="@+id/iv_celsius"
                card_view:layout_constraintVertical_bias="0.0"
                tools:text="20.57" />

            <TextView
                android:id="@+id/tv_desc_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_68"
                android:text="@string/humidity"
                android:textColor="@color/white"
                android:textSize="@dimen/card_last_text_size"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_degree" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8_dp"
                android:layout_marginLeft="@dimen/margin_8_dp"
                android:textColor="@color/white"
                android:textSize="@dimen/card_last_text_size"
                card_view:layout_constraintStart_toStartOf="@+id/guideline"
                card_view:layout_constraintTop_toTopOf="@+id/tv_desc_humidity"
                tools:text="20 %" />

            <TextView
                android:id="@+id/tv_desc_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dialog_top_16_dp"
                android:text="@string/wind"
                android:textColor="@color/white"
                android:textSize="@dimen/card_last_text_size"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_desc_humidity" />

            <TextView
                android:id="@+id/tv_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8_dp"
                android:layout_marginLeft="@dimen/margin_8_dp"
                android:layout_marginTop="@dimen/dialog_top_16_dp"
                android:textColor="@color/white"
                android:textSize="@dimen/card_last_text_size"
                card_view:layout_constraintStart_toStartOf="@+id/guideline"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_humidity"
                tools:text="20 %" />

            <TextView
                android:id="@+id/tv_desc_rain_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dialog_top_16_dp"
                android:text="@string/precipitation"
                android:textColor="@color/white"
                android:textSize="@dimen/card_last_text_size"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_desc_wind" />

            <TextView
                android:id="@+id/tv_rain_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_19"
                android:layout_marginStart="@dimen/margin_8_dp"
                android:layout_marginLeft="@dimen/margin_8_dp"
                android:textColor="@color/white"
                android:textSize="@dimen/card_last_text_size"
                card_view:layout_constraintStart_toStartOf="@+id/guideline"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_wind"
                tools:text="20 %" />

            <TextView
                android:id="@+id/tv_desc_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="@dimen/dp_10"
                android:layout_marginStart="@dimen/margin_8_dp"
                android:layout_marginLeft="@dimen/margin_8_dp"
                android:layout_marginTop="@dimen/dp_28"
                android:text="@string/card_discription"
                android:textColor="@color/white"
                android:textSize="@dimen/card_last_text_size"
                card_view:layout_constraintStart_toStartOf="@+id/tv_desc_rain_level"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_desc_rain_level" />

            <TextView
                android:id="@+id/tv_discription_weather"
                android:layout_width="@dimen/dp_130"
                android:layout_height="@dimen/dp_47"
                android:ellipsize="end"
                android:gravity="start"
                android:padding="@dimen/dp_5"
                android:singleLine="false"
                android:textColor="@color/white"
                android:textSize="@dimen/card_last_text_size"
                card_view:layout_constraintStart_toStartOf="@+id/guideline"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_rain_level"
                tools:layout_editor_absoluteX="215dp" />


            <ImageView
                android:id="@+id/iv_trash"
                android:layout_width="@dimen/dp_47"
                android:layout_height="@dimen/dp_31"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/cardview_text_margin"
                android:layout_marginStart="@dimen/margin_8_dp"
                android:layout_marginLeft="@dimen/margin_8_dp"
                android:layout_marginEnd="@dimen/margin_8_dp"
                android:layout_marginRight="@dimen/margin_8_dp"
                android:layout_marginBottom="@dimen/margin_8_dp"
                android:src="@drawable/trash_icon"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.516"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_discription_weather"
                card_view:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                card_view:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>